# esp8266-rust-template

./: README.md
cargo/: Cargo.toml  LICENSE-APACHE  README.md  cargo-generate.toml
cargo/.cargo/: config.toml
cargo/src/: main.rs
